# RGBD-VIO

./: CMakeLists.txt  package.xml
config/: ipad.yaml  iphone12.yaml  iphone12_hd.yaml  new_struct_core.yaml  realsense_d435_downsample.yaml  struct_core_v2.yaml  struct_core_v2_dvio.yaml
launch_rvio/: dvio_demo.rviz  ipad.launch  iphone12.launch  iphone12_hd.launch  run_dvio.launch  run_dvio_ds435_ds.launch  rvio_demo.rviz  rvio_ds435_ds.launch  rvio_ss.launch
result/rvio_wroma/: corridor1.csv  corridor5.csv  lab1.csv  lab2.csv  room8.csv  rvi_cor10.csv  rvi_cor3.csv  rvi_cor4.csv  rvi_cor5.csv  rvi_cor9.csv  rvi_lab1.csv  rvi_lab13.csv  rvi_lab14.csv  rvi_lab15.csv  rvi_lab16.csv  rvi_lab3.csv  short1.csv  short2.csv  short3.csv  short4.csv
rvio/: CMakeLists.txt  depth_factor.cpp  dvio_init_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  plane.h  plane.hpp  plane_correct_pose.cpp  projection_quat.cpp  run_dvio_node.cpp  rvio.cpp  rvio.h  rvio_dvio.cpp  rvio_init.cpp  rvio_plane.cpp  rvio_syn_node.cpp  visualization.cpp  visualization.h
rvio/feature_tracker/: feature_tracker.h  feature_tracker_node.cpp  show_feat_result.cpp  vtk_viewer.h  vtk_viewer.hpp
rvio/initial/: gmm_model.cpp  initial_alignment.cpp  initial_alignment.h  initial_sfm.cpp  solve_5pts.cpp  solve_opt.cpp
rvio/utility/: plane_correct_pose.h  pointDefinition.h  utility.h
